// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[component-declaration-file] framework module augmentations > augments the \`@stencil/core\` module with LocalJSX.IntrinsicElements 1`] = `
"
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
//        Apply module types for StencilJS templates
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
// @ts-expect-error This module exists in StencilJS applications
declare module "@stencil/core" {
  // eslint-disable-next-line @typescript-eslint/no-namespace
  export namespace JSX {
    // eslint-disable-next-line @typescript-eslint/no-empty-object-type
    interface IntrinsicElements extends LocalJSX.IntrinsicElements {}
  }
}"
`;

exports[`[component-declaration-file] framework module augmentations > augments the \`react\` module with LocalJSX.IntrinsicElements 1`] = `
"
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
//          Apply module types for React templates
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
// @ts-expect-error This module exists in React applications
declare module "react" {
  // eslint-disable-next-line @typescript-eslint/no-namespace
  namespace JSX {
    // eslint-disable-next-line @typescript-eslint/no-empty-object-type
    interface IntrinsicElements extends LocalJSX.IntrinsicElements {}
  }
}"
`;

exports[`[component-declaration-file] framework module augmentations > augments the \`solid-js\` module with SolidJsJSX.IntrinsicElements 1`] = `
"
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
//         Apply module types for SolidJS templates
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
// @ts-expect-error This module exists in SolidJS applications
declare module "solid-js" {
  // eslint-disable-next-line @typescript-eslint/no-namespace
  namespace JSX {
    // eslint-disable-next-line @typescript-eslint/no-empty-object-type
    interface IntrinsicElements extends SolidJsJSX.IntrinsicElements {}
  }
}"
`;
